nextest-runner/src/record/snapshots/nextest_runner__record__display__tests__with_cli_and_env.snap
---
source: nextest-runner/src/record/display.rs
expression: "runs[0].display_detailed(&index, &Styles::default(), &theme_characters,\n&redactor).to_string()"
snapshot_kind: text
---
Run 550e8400-e29b-41d4-a716-446655440000

  nextest version:  0.9.122
  command:          cargo nextest run --workspace --features 'foo bar'
  env:              CARGO_HOME=/home/user/.cargo NEXTEST_PROFILE=ci
  status:           completed
  started at:       2024-06-15 10:30:00 +00:00
  last written at:  2024-06-15 10:30:00 +00:00
  duration:         12.345s
  replayable:       yes

  tests:
    passed:         95
    failed:         5

  sizes:            compressed  uncompressed  entries
    log                   1 KB          4 KB      100
    store                50 KB        200 KB       42
                    ----------  ------------  -------
    total                51 KB        204 KB      142
